--- a/animated.html
+++ b/animated.html
@@ -8,14 +8,17 @@ keywords:       Awesome, website, keywords
 
 <section class="animated">
 	<div class="animated-title">
+		<div class="overlay board board-1"></div>
+		<div class="overlay board board-2"></div>
 		<div class="container">
 		</div>
 	</div>	
 	<div class="container">
 		<div class="row">
-			<div class="col-md-12">
+			<div class="col-md-8">
 				<h1>Vloeiende animaties</h1>
-				<p>Natuurlijk, ze zijn ook gewoon cool, maar met wat simpele animaties kun je ook veel meer doen. je creeert een beleving.</p>
+				<p>Natuurlijk... ze zijn ook gewoon cool. Maar met wat simpele animaties breng je het verhaal tot leven. COAST is standaard uitgerust met spectaculaire y-as animaties, voor die mooie parallax effecten. (Om er nog maar eens een hip buzzword in te gooien.) <br>
+				Maar daarnaast is bijna ieder interactief element voorzien van subtiele animaties, voor een beter interactiegevoel en net weer dat extra stukje onderscheid.</p>
 			</div>
 		</div>
 	</div>
