--- a/kosten.html
+++ b/kosten.html
@@ -6,7 +6,8 @@ description:    Wow this really is an awesome website
 keywords:       Awesome, website, keywords
 ---
 
-<section class="responsive phones">
+
+<section class="kosten">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6">
